fixed a weird font size wrapping problem

--- a/public_html/static/css/index.css
+++ b/public_html/static/css/index.css
@@ -16,7 +16,7 @@ body, html{
 
 h1{
 	text-transform: uppercase;
-	font-size:50px;
+	font-size:49px;
 	margin-bottom:20px;
 	display: block;
 }
